--- a/purchases_service/package.json
+++ b/purchases_service/package.json
@@ -16,12 +16,16 @@
     "lint": "eslint \"{src,apps,libs}/**/*.ts\" --fix"
   },
   "dependencies": {
+    "@nestjs/apollo": "^10.0.22",
     "@nestjs/common": "^9.0.0",
     "@nestjs/config": "^2.2.0",
     "@nestjs/core": "^9.0.0",
+    "@nestjs/graphql": "^10.0.22",
     "@nestjs/platform-express": "^9.0.0",
     "@prisma/client": "^4.2.1",
+    "apollo-server-express": "^3.10.1",
     "express-jwt": "^6.1.1",
+    "graphql": "^16.6.0",
     "jwks-rsa": "^2.1.4",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
