--- a/web/.env.example
+++ b/web/.env.example
@@ -4,3 +4,14 @@ AUTH0_CLIENT_SECRET=PQ5HsJ594p4BrTlNER_vLj0mwl5fyKZfHIimwNYsqkNnnBwUywUP1r6l1qd7
 AUTH0_BASE_URL=http://localhost:3000
 AUTH0_AUDIENCE=ignite-lab-01-auth-freire
 AUTH0_ISSUER_BASE_URL=https://ignite-lab-01-freire.us.auth0.com/
+
+
+Purchases
+DATABASE_URL="postgresql://docker:docker@localhost:5432/purchases?shcema=public"
+AUTH0_AUDIENCE=ignite-lab-01-auth-freire
+AUTH0_DOMAIN=https://ignite-lab-01-freire.us.auth0.com/
+
+Classroom
+DATABASE_URL="postgresql://docker:docker@localhost:5432/purchases?shcema=public"
+AUTH0_AUDIENCE=ignite-lab-01-auth-freire
+AUTH0_DOMAIN=https://ignite-lab-01-freire.us.auth0.com/
