--- a/classroom_service/package.json
+++ b/classroom_service/package.json
@@ -21,6 +21,7 @@
     "@nestjs/config": "^2.2.0",
     "@nestjs/core": "^9.0.0",
     "@nestjs/graphql": "^10.0.22",
+    "@nestjs/microservices": "^9.1.4",
     "@nestjs/platform-express": "^9.0.0",
     "@prisma/client": "^4.2.1",
     "apollo-server-express": "^3.10.1",
@@ -28,6 +29,7 @@
     "express-jwt": "^6.1.1",
     "graphql": "^16.6.0",
     "jwks-rsa": "^2.1.4",
+    "kafkajs": "^2.2.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
