--- a/purchases_service/package.json
+++ b/purchases_service/package.json
@@ -16,6 +16,7 @@
     "lint": "eslint \"{src,apps,libs}/**/*.ts\" --fix"
   },
   "dependencies": {
+    "@apollo/federation": "^0.37.1",
     "@nestjs/apollo": "^10.0.22",
     "@nestjs/common": "^9.0.0",
     "@nestjs/config": "^2.2.0",
@@ -25,8 +26,9 @@
     "@nestjs/platform-express": "^9.0.0",
     "@prisma/client": "^4.2.1",
     "apollo-server-express": "^3.10.1",
+    "chalk": "^5.1.2",
     "express-jwt": "^6.1.1",
-    "graphql": "^16.6.0",
+    "graphql": "15",
     "jwks-rsa": "^2.1.4",
     "kafkajs": "^2.2.0",
     "reflect-metadata": "^0.1.13",
